--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Calculate difference between 2 numbers",
   "main": "app.js",
   "scripts": {
-    "test": "node test",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "author": "Vivek Bindal",
